[package]
name = "nom_edn"
version = "0.1.0"
authors = ["Clark Kampfe <clark.kampfe@gmail.com>"]
edition = "2018"

[features]
default = ["im"]

[dependencies]
chrono = "0.4"
im = { version = "15.0", optional = true }
im-rc = { version = "15.0", optional = true }
nom = "6.0"
ordered-float = "2.0"
rust_decimal = "1.8"
uuid = "0.8"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench"
harness = false

[profile.bench]
lto = true
