[package]
name = "nom_edn"
version = "0.1.0"
authors = ["Clark Kampfe <clark.kampfe@gmail.com>"]
edition = "2018"

[features]
default = []

[dependencies]
chrono = "0.4"
im = { version = "15.0", optional = true }
im-rc = { version = "15.0", optional = true }
nom = "7.0"
ordered-float = "3.0"
rust_decimal = "1.16"
uuid = "0.8"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench"
harness = false

[profile.bench]
codegen-units = 1
lto = true
